--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3GROUP Fotografía</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="img/favicon.ico">
     <!-- LINK TO CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- GOOGLE FONT: Lato -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/juu3hyl.css">
+    
 </head>
-<body>
+<body id="index_html">
     <!-- LOGO + BARRA DE NAVEGACIÓN -->
     <header>
         <div class="back">
@@ -40,10 +44,47 @@
     <!-- CONTENIDO DE LA PÁGINA - página en construcción -->
     <section class="index_open">
         <article class="main_photo">
-            <img src="img/FOTO PRINCIPAL.jpg" alt="foto de boda en méxico">
+            <!-- <img src="img/FOTO PRINCIPAL.jpg" alt="foto de boda en méxico"> -->
         </article>
-        <p>º º º</p>
     </section>
+    <div class="recent_work_title-container">
+        <h3 class="recent_work_title">TRABAJOS RECIENTES</h3>
+    </div>
+
+    <div class="recent_work_container">
+        <section class="recent_work">
+
+            <div class="recent_img">
+                <article class="img1"></article>
+                <div class="recent_work_description_1">
+                    <h4>Boda en Buenos Aires</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio delectus, dolorum officia qui error amet eveniet voluptatibus omnis.</p>
+                </div>
+                <button>Ver Más</button>
+            </div>
+
+            <div class="recent_img">
+                <article class="img2"></article>
+                <div>
+                    <h4>Fotografía Real State</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, porro. Modi accusantium saepe ut impedit delectus doloremque iste.</p>
+                </div>
+                <button>Ver Más</button>
+            </div>
+
+            <div class="recent_img">
+                <article class="img3"></article>
+                <div>
+                    <h4>Boda LGTBI en MDQ</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptatum consequatur iusto. Saepe nihil non itaque quo aliquid.</p>
+                </div>
+                <button type="button">Ver Más</button>
+            </div>
+
+        </section>
+    </div>
+
+
 
     <!-- +++++++++++ -->
     <!-- Open FOOTER -->
@@ -51,20 +92,22 @@
         <!-- Open BOTONES SOCIAL MEDIA -->
         <div class="social-media-buttons">
             <button class="social-media-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
             </button>
             <button class="social-media-button">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4l11.733 16h4.267l-11.733 -16z" /><path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" /></svg>
+                <svg class="icon icon-tabler icon-tabler-brand-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4l11.733 16h4.267l-11.733 -16z" /><path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" /></svg>
             </button>
             <button class="social-media-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
             </button>
             <button class="social-media-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
             </button>
         </div>
         <!-- Close BOTONES SOCIAL MEDIA -->
-        <p>© Copyright 2024 Norte Studio | All rights reserved.</p>
+        <div id="copyright">
+            <p>Copyright © 2024 Norte Studio | All rights reserved.</p>
+        </div>
     </footer>
        <!-- End FOOTER -->
        <!-- +++++++++++ -->
