cambios en el favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3GROUP Fotografía</title>
     <!-- FAVICON -->
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon1.ico">
     <!-- LINK TO CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- GOOGLE FONT: Lato -->
