--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3GROUP Fotografía</title>
+    <!-- FAVICON -->
+    <link rel="icon" href="img/favicon1.ico">
     <!-- LINK TO CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- GOOGLE FONT: Lato -->
