Agregando función validación en javascript (todavía no funciona)

--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,10 @@
     <!-- +++++++++++++++++++++++++++ -->
     <!-- Open FORMULARIO DE CONTACTO -->
     <main class="contact--HTML">
-        <form action="" method="" enctype="" class="contact_form">
+        <form action="#" method="get" enctype="" class="contact_form">
             <div class="div-1">
                 <input type="text" name="name" id="name" placeholder="Nombre*" class="btn" required>
+                <div id="errorNombre"></div>
                 <input type="text" name="lastname" id="lastname" placeholder="Apellido*" class="btn" required>
                 <input type="email" name="email" id="mail" placeholder="E-Mail*" class="btn" required>
                 <input type="number" name="phone" id="phone" placeholder="Teléfono" class="btn">
@@ -93,6 +94,12 @@
         <p>Copyright © 2024 Norte Studio | All rights reserved.</p>
     </footer>
        <!-- End FOOTER -->
+       <!-- +++++++++++ -->
+
+       <!-- +++++++++++ -->
+       <!-- OPEN ANCLAJE JAVASCRITP -->
+       <script src="./script.js"></script>
+       <!-- End ANCLAJE JAVASCRIPT -->
        <!-- +++++++++++ -->
 </body>
 </html>
