--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,8 @@
         <form action="#" method="get" enctype="" class="contact_form">
             <div class="div-1">
                 <input type="text" name="name" id="name" placeholder="Nombre*" class="btn" required>
-                <div id="errorNombre"></div>
-                <input type="text" name="lastname" id="lastname" placeholder="Apellido*" class="btn" required>
-                <input type="email" name="email" id="mail" placeholder="E-Mail*" class="btn" required>
+                <input type="text" name="lastname" id="lastName" placeholder="Apellido*" class="btn" required>
+                <input type="email" name="email" id="email" placeholder="E-Mail*" class="btn" required>
                 <input type="number" name="phone" id="phone" placeholder="Teléfono" class="btn">
             </div>
             <div>
@@ -64,7 +63,7 @@
             </div>
             <div class="div-3">
                 <button type="reset" value="Limpiar" class="btn reset_btn">Limpiar</button>
-                <input type="submit" value="Enviar" class="search_btn">
+                <input type="submit" value="Enviar" onclick="validarDatos(event)" class="search_btn">
             </div>
         </form>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13391.642150063928!2d-60.6552188!3d-32.9533713!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6c6f7ac1ad%3A0x50d95c84a55bea71!2sConsulado%20General%20de%20Italia%20en%20Rosario!5e0!3m2!1ses!2sar!4v1713382629762!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -77,18 +76,30 @@
     <footer>
         <!-- Open BOTONES SOCIAL MEDIA -->
         <div class="social-media-buttons">
-            <button class="social-media-button">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
-            </button>
-            <button class="social-media-button">
-                <svg class="icon icon-tabler icon-tabler-brand-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4l11.733 16h4.267l-11.733 -16z" /><path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" /></svg>
-            </button>
-            <button class="social-media-button">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
-            </button>
-            <button class="social-media-button">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-            </button>
+            <a href="https://www.instagram.com" target="_blank">
+                <button class="social-media-button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                    </svg>
+                </button>
+            </a>
+            <a href="https://www.x.com" target="_blank">
+                <button class="social-media-button">
+                    <svg class="icon icon-tabler icon-tabler-brand-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4l11.733 16h4.267l-11.733 -16z" /><path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" /></svg>
+                </button>
+            </a>
+            <a href="https://www.youtube.com" target="_blank">
+                <button class="social-media-button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
+                </button>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank">
+                <button class="social-media-button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
+                </button>
+            </a>
         </div>
         <!-- Close BOTONES SOCIAL MEDIA -->
         <p>Copyright © 2024 Norte Studio | All rights reserved.</p>
