arreglos en el navbar

--- a/about.html
+++ b/about.html
@@ -34,13 +34,15 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="about.html" style="border-bottom: 2px #fff solid;">Sobre mi</a></li>
+                        <li><a href="about.html" class="active">Sobre mi</a></li>
                         <li><a href="contact.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
+    
+    
 
     <!-- CONTENIDO DE LA PÁGINA - página en construcción -->
 
