--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 
                 <nav class="navbar">
                     <ul>
-                        <li><a href="index.html" style="border-bottom: 2px #fff solid;">Inicio</a></li>
+                        <li><a href="index.html" class="active">Inicio</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="about.html">Sobre mi</a></li>
                         <li><a href="contact.html">Contacto</a></li>
@@ -40,6 +40,7 @@
             </div>
         </div>
     </header>
+    
 
     <!-- CONTENIDO DE LA PÁGINA - página en construcción -->
     <section class="index_open">
