--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header>
         <div class="back">
             <div class="menu container">
-                <a href="index.html" class="logo">
+                <a href="#" class="logo">
                     <img src="img/logo_anadg_white.png" alt="logo">
                     <p>3group</p>
                 </a>
@@ -26,10 +26,11 @@
                 <label for="menu">
                     <img src="img/menu.png" class="menu-icono" alt="menu">
                 </label>
+                
                 <nav class="navbar">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="portfolio.html" style="border-bottom: 2px #fff solid;">Portfolio</a></li>
+                        <li><a href="portfolio.html" class="active">Portfolio</a></li>
                         <li><a href="about.html">Sobre mi</a></li>
                         <li><a href="contact.html">Contacto</a></li>
                     </ul>
@@ -37,6 +38,8 @@
             </div>
         </div>
     </header>
+    
+
 
     <!-- CONTENIDO DE LA PÁGINA -->
     <div class="gallery">
