--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,14 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="about.html">Sobre mi</a></li>
-                        <li><a href="contact.html" style="border-bottom: 2px #fff solid;">Contacto</a></li>
+                        <li><a href="contact.html" class="active">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
+    
+    
 
     <!-- +++++++++++++++++++++++++++ -->
     <!-- Open FORMULARIO DE CONTACTO -->
