--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </a>
             </button>
             <button class="social-media-button">
-                <a href="https://www.x.com" target="_blank">
+                <a href="https://www.linkedin.com" target="_blank">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
                 </a>
             </button>
