--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 <input type="text" name="name" id="name" placeholder="Nombre*" class="btn" required>
                 <input type="text" name="lastname" id="lastName" placeholder="Apellido*" class="btn" required>
                 <input type="email" name="email" id="email" placeholder="E-Mail*" class="btn" required>
-                <input type="number" name="phone" id="phone" placeholder="Teléfono" class="btn">
+                <input type="tel" name="phone" id="phone" placeholder="Teléfono" class="btn">
             </div>
             <div>
                 <p>¿Cómo nos conociste?</p>
