--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,9 @@
             </button>
         </div>
         <!-- Close BOTONES SOCIAL MEDIA -->
-        <p>Copyright © 2024 Norte Studio | All rights reserved.</p>
+        <div id="copyright">
+            <p>Copyright © 2024 Norte Studio | All rights reserved.</p>
+        </div>
     </footer>
        <!-- End FOOTER -->
        <!-- +++++++++++ -->
