--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/juu3hyl.css">
+    <!-- LINK TO FONTAWESOME -->
+    <script src="https://kit.fontawesome.com/b7d0811a13.js" crossorigin="anonymous"></script>
 </head>
 <body id="portfolio_html">
     <!-- LOGO + BARRA DE NAVEGACIÓN -->
@@ -131,6 +133,18 @@
         </div>
     </footer>
        <!-- End FOOTER -->
+       <!-- +++++++++++ -->
+
+          <!-- +++++++++++ -->
+       <!-- BACK TO TOP ICON -->
+       <a id="top" href="#">
+        <i class="fa-solid fa-turn-up"></i>
+       </a>
+
+       <!-- +++++++++++ -->
+       <!-- OPEN ANCLAJE JAVASCRITP -->
+       <script src="./script.js"></script>
+       <!-- End ANCLAJE JAVASCRIPT -->
        <!-- +++++++++++ -->
 </body>
 </html>
