--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/juu3hyl.css">
     <!-- GOOGLE FONT: Pacifico-->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <!-- LINK TO FONTAWESOME -->
+    <script src="https://kit.fontawesome.com/b7d0811a13.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- LOGO + BARRA DE NAVEGACIÓN -->
@@ -140,5 +142,16 @@
 </footer>
    <!-- End FOOTER -->
    <!-- +++++++++++ -->
+   <!-- +++++++++++ -->
+       <!-- BACK TO TOP ICON -->
+       <a id="top" href="#">
+        <i class="fa-solid fa-turn-up"></i>
+       </a>
+
+       <!-- +++++++++++ -->
+       <!-- OPEN ANCLAJE JAVASCRITP -->
+       <script src="./script.js"></script>
+       <!-- End ANCLAJE JAVASCRIPT -->
+       <!-- +++++++++++ -->
 </body>
 </html>
