--- a/index.html
+++ b/index.html
@@ -13,36 +13,75 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/juu3hyl.css">
+    <!-- LINK TO FONTAWESOME -->
+    <script src="https://kit.fontawesome.com/b7d0811a13.js" crossorigin="anonymous"></script>
+    <!--BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet"integrity=
+    "sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
 </head>
 <body id="index_html">
     <!-- LOGO + BARRA DE NAVEGACIÓN -->
-    <header>
-        <div class="back">
-            <div class="menu container">
-                <a href="index.html" class="logo">
-                    <img src="img/logo_anadg_white.png" alt="logo">
-                    <p>3group</p>
-                </a>
-                <input type="checkbox" id="menu">
-                <label for="menu">
-                    <img src="img/menu.png" class="menu-icono" alt="menu">
-                </label>
-                
-                <nav class="navbar">
-                    <ul>
-                        <li><a href="index.html" style="border-bottom: 2px #fff solid;" class="active">Inicio</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="about.html">Sobre mi</a></li>
-                        <li><a href="contact.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
+   <!-- LOGO + BARRA DE NAVEGACIÓN -->
+   <header id="header">
+    <div class="back">
+        <div class="menu container">
+            <a href="index.html" class="logo">
+                <img src="img/logo_anadg_white.png" alt="logo">
+                <p>3group</p>
+            </a>
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="img/menu.png" class="menu-icono" alt="menu">
+            </label>
+            
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html" class="active" style="border-bottom: 2px #fff solid;">Inicio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="about.html">Sobre mi</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
+    </div>
     </header>
 
     <!-- HERO IMAGE -->
     <section class="index_open">
         <article class="main_photo">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+
+                  <div class="carousel-item active" data-bs-interval="5000">
+                    <img src="img/FOTO PRINCIPAL.jpg" class="d-block w-100" alt="foto de boda en méxico">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                  </div>
+
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="./img/real_estate.jpg" class="d-block w-100" alt="Recien casados en el campo">
+                    <div class="carousel-caption d-none d-md-block">                   
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <img src="img/FOTO PRINCIPAL.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                    </div>
+                  </div>
+
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </article>
     </section>
 
@@ -170,7 +209,13 @@
    <!-- +++++++++++ -->
        <!-- +++++++++++ -->
 
+       <!-- BACK TO TOP ICON -->
+       <a id="top" href="#">
+        <i class="fa-solid fa-turn-up"></i>
+       </a>
        <!-- AGREGANDO JAVASCRIPT -->
     <script src="script.js"></script>
+    <!--BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
