--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
 
        <!-- +++++++++++ -->
        <!-- OPEN ANCLAJE JAVASCRITP -->
-       <script src="./script.js"></script>
+       <script src="./script1.js"></script>
        <!-- End ANCLAJE JAVASCRIPT -->
        <!-- +++++++++++ -->
 </body>
