--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
 <body id="index_html">
     <!-- LOGO + BARRA DE NAVEGACIÓN -->
    <!-- LOGO + BARRA DE NAVEGACIÓN -->
-   <header id="header">
-    <div class="back">
-        <div class="menu container">
-            <a href="index.html" class="logo">
-                <img src="img/logo_anadg_white.png" alt="logo">
-                <p>3group</p>
-            </a>
-            <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="img/menu.png" class="menu-icono" alt="menu">
-            </label>
-            
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html" class="active" style="border-bottom: 2px #fff solid;">Inicio</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="about.html">Sobre mi</a></li>
-                    <li><a href="contact.html">Contacto</a></li>
-                </ul>
-            </nav>
+    <header>
+        <div class="back">
+            <div class="menu container">
+                <a href="#" class="logo">
+                    <img src="img/logo_anadg_white.png" alt="logo">
+                    <p>3group</p>
+                </a>
+                <input type="checkbox" id="menu">
+                <label for="menu">
+                    <img src="img/menu.png" class="menu-icono" alt="menu">
+                </label>
+                
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="index.html" class="active">Inicio</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="about.html" >Sobre mi</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
     </header>
 
     <!-- HERO IMAGE -->
