--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <article class="img1"></article>
                 <div class="recent_work_description">
                     <h4>Boda en Buenos Aires</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam corporis rem eos consequuntur vero tempora ullam voluptatibus doloribus.</p>
+                    <p>El pasado fin de semana, Buenos Aires fue el escenario de una boda encantadora y memorable que quedó inmortalizada en una serie de hermosas fotografías.</p>
                 </div>
                 <div class="thebtn">
                     <a href="" class="mybtn"><span>Ver más</span></a>
@@ -110,7 +110,7 @@
                 <article class="img2"></article>
                 <div class="recent_work_description">
                     <h4>Fotografía Real State</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, dolores. Inventore, doloremque eos maiores vitae odit explicabo enim?</p>
+                    <p>Como fotógrafo de arquitectura y diseño en Mallorca tengo la suerte de capturar la belleza y la esencia de los espacios arquitectónicos de la isla. Argentina tiene una rica historia arquitectónica</p>
                 </div>
                 <div class="thebtn">
                     <a href="" class="mybtn"><span>Ver más</span></a>
@@ -121,7 +121,7 @@
                 <article class="img3"></article>
                 <div class="recent_work_description">
                     <h4>Boda LGTBI en MDQ</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quisquam ad delectus magni? Molestias doloremque accusamus numquam quaerat.</p>
+                    <p>Si hay que poner algún adjetivo a esta boda que hoy les presento es ” impresionante”. Sin duda he vivido como fotógrafo en B.A. una de las mejores bodas de mi vida..</p>
                 </div>
                 <div class="thebtn">
                     <a href="" class="mybtn"><span>Ver más</span></a>
