útlima última actualización

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <article class="img2"></article>
                 <div class="recent_work_description">
                     <h4>Fotografía Real State</h4>
-                    <p>Como fotógrafo de arquitectura y diseño en Mallorca tengo la suerte de capturar la belleza y la esencia de los espacios arquitectónicos de la isla. Argentina tiene una rica historia arquitectónica</p>
+                    <p>Como fotógrafo de arquitectura y diseño en Mallorca tengo la suerte de capturar la belleza y la esencia de los espacios arquitectónicos de la isla...</p>
                 </div>
                 <div class="thebtn">
                     <a href="" class="mybtn"><span>Ver más</span></a>
