--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
 
                   <div class="carousel-item">
-                    <img src="img/FOTO PRINCIPAL.jpg" class="d-block w-100" alt="">
+                    <img src="img/pro-estudio.jpg" class="d-block w-100" alt="">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                   </div>
